--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             openYouTubeVideo("https://youtu.be/tL6SQ2PGXV4?si=9YiLgYqUUlaaOxy-");
         } else {
             alert("sabe ko nga hindi pa haysss sabe kasi ni mark zuckerborgee HAHAHHAHAHAHA okay byee eyyy ka nalang eyyyy~~~~");
-            showPhoto("https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/451170796_512833064602952_349344601445490862_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=VZQo3wmv0yQQ7kNvgFG_WI6&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QFHyaQTBkhfozF9VCPWy0lIb1LzPSvPO_wK802J-4t8KQ&oe=66CE9C69);
+            showPhoto("https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/451170796_512833064602952_349344601445490862_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=VZQo3wmv0yQQ7kNvgFG_WI6&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QFHyaQTBkhfozF9VCPWy0lIb1LzPSvPO_wK802J-4t8KQ&oe=66CE9C69");
         }
     }
 
