--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             openYouTubeVideo("https://youtu.be/tL6SQ2PGXV4?si=9YiLgYqUUlaaOxy-");
         } else {
             alert("sabe ko nga hindi pa haysss sabe kasi ni mark zuckerborgee HAHAHHAHAHAHA okay byee eyyy ka nalang eyyyy~~~~");
-            showPhoto("https://ibb.co/W2JyZmj");
+            showPhoto("https://www.facebook.com/messenger_media/?attachment_id=1014481356999695&message_id=mid.%24gAFp39winlNKXbl_0I2RPRqpQx27f&thread_id=25464650789786834");
         }
     }
 
