--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             openYouTubeVideo("https://youtu.be/tL6SQ2PGXV4?si=9YiLgYqUUlaaOxy-");
         } else {
             alert("sabe ko nga hindi pa haysss sabe kasi ni mark zuckerborgee HAHAHHAHAHAHA okay byee eyyy ka nalang eyyyy~~~~");
-            showPhoto("https://www.facebook.com/messenger_media/?attachment_id=1014481356999695&message_id=mid.%24gAFp39winlNKXbl_0I2RPRqpQx27f&thread_id=25464650789786834");
+            showPhoto("https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/453361353_1014481360333028_9215832726844152012_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_ohc=vRc3C9cJ5lQQ7kNvgHW0cX9&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1QED7LDmwJrS5F6h_bLOd_8NF6zY1HhkhcqbdDssC9CqrA&oe=66DEF106");
         }
     }
 
